Added city label to data files.

--- a/data/meetings/seaside.json
+++ b/data/meetings/seaside.json
@@ -1,237 +1,425 @@
 [
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-02-21T01:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2805&page=254",
         "agenda": "http://www.ci.seaside.ca.us/Modules/ShowDocument.aspx?documentid=9104"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-02-21T03:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2940&page=254",
         "agenda": "http://www.ci.seaside.ca.us/Modules/ShowDocument.aspx?documentid=9116"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Oversight Board to the Successor Agency of the ",
         "date": "2014-02-25T00:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2577&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-03-07T02:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2657&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-03-07T03:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2964&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-03-21T01:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2804&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-03-21T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2939&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Oversight Board to the Successor Agency of the ",
         "date": "2014-03-24T23:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2576&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-04-04T01:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2656&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-04-04T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2963&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-04-18T01:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2803&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-04-18T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2938&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Oversight Board to the Successor Agency of the ",
         "date": "2014-04-28T23:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2575&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-05-02T01:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2655&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-05-02T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2962&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-05-16T01:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2802&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-05-16T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2937&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Oversight Board to the Successor Agency of the ",
         "date": "2014-05-26T23:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2574&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-06-06T01:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2654&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-06-06T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2961&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-06-20T01:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2801&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-06-20T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2936&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Oversight Board to the Successor Agency of the ",
         "date": "2014-06-23T23:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2573&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-07-04T01:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2653&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-07-04T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2960&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-07-18T01:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2800&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-07-18T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2935&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Oversight Board to the Successor Agency of the ",
         "date": "2014-07-28T23:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2572&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-08-08T01:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2652&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-08-08T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2959&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-08-22T01:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2799&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-08-22T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2934&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Oversight Board to the Successor Agency of the ",
         "date": "2014-08-25T23:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2571&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-09-05T01:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2651&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-09-05T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2958&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "Successor Agency ",
         "date": "2014-09-19T01:30:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2798&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-09-19T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2933&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-10-03T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2957&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-10-17T02:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2932&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-11-07T03:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2956&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-11-21T03:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2931&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-12-05T03:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2955&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2014-12-19T03:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2930&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2015-01-02T03:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2954&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2015-01-16T03:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2929&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2015-02-06T03:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2953&page=254"
     },
     {
+        "city": {
+            "city": "Seaside",
+            "zip": "93955"
+        },
         "title": "City Council Meeting",
         "date": "2015-02-20T03:00:00.000Z",
         "url": "http://www.ci.seaside.ca.us/index.aspx?recordid=2928&page=254"
