--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "request": "~2.33.0",
     "cheerio": "~0.13.1",
     "pdf-extract": "~1.0.6",
-    "feedparser": "~0.16.6"
+    "feedparser": "~0.16.6",
+    "pdf-text": "~0.3.0",
+    "lodash": "~2.3.0",
+    "pdf2json": "~0.6.6",
+    "pdfjs": "~0.3.1"
   }
 }
